2008-08-24  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/info.c: Skip displaying info-popup until gv_infoSkipErrors
	are sent -- usually gv_infoSkipErrors is 0, but after recognising an
	encrypted pdf, it is set to 1.
	
	* src/callbacks.c (cb_setPassword): Trigger reload of ghostscript by
	calling "cb_reopen(...)".
	
	* src/main.c: Initialize gv_infoSkipErrors with 0
	
	* src/main_globals.h: Declare gv_infoSkipErrors.
	
	* src/ps.c (psscan): Set gv_infoSkipErrors to 1 and jump over
	displaying dsc-parser error.

2008-08-23  Bernhard R. Link <brlink@debian.org>

	* src/callbacks.c (cb_setPassword): New callback for setting password.
	
	* src/callbacks.c (cb_cancelPassword): New callback aborting
	password dialog.
	
	* src/callbacks.c (cb_askPassword): New callback Displaying the 
	password dialog.
	
	* src/callbacks.h: likewise
	
	* src/ps.c (psscan): Use new callback cb_askPassword to query the user
	for the password.

2008-08-23  Markus Steinborn <msteinbo@uni-paderborn.de>

	* doc/gv.texi: Describe new option "--password=PASSWORD".
	
	* src/Ghostview.c (StartInterpreter): Pass actual PDF password
	to ghostscript.
	
	* src/gv_message.h: Add description of new "--password=PASSWORD" option.
	
	* src/main.c (main): Parse new password-Option from command line
	
	* src/main_globals.h: New global variable for the PDF password.
	
	* src/ps.c (psscan): Pass actual PDF password to ghostscript.
	
	* src/versionp.h: Bump required resource version.
	
	* src/gv_misc_res.dat: likewise
	
	* src/Makefile.am: Update GV.gsCmdConvPDF

	* src/gv-update-userconfig.in: remove GV.gsCmdConvPDF iff necessary.

2008-08-10  Markus Steinborn <msteinbo@uni-paderborn.de>

	* configure.ac, src/versionp.h: Bump version to 3.6.5.91.
	
	* src/resource.c (resource_buildDatabase): Setting resource
	"gv.arguments" is useless as it is not read.
	
	* src/Makefile.am: Append the contents of gv_misc_res.dat to
	gv-update-userconfig, too.
	