@@ -1,3 +1,11 @@
+2008-08-30  Markus Steinborn <msteinbo@uni-paderborn.de>
+
+	* src/ps.c (ps_io_ftell): Changed return type to long
+	
+	* src/ps.c (ps_io_fseek): Changed 2nd argument to long
+	
+	* src/ps.c (FileDataStruct_): Changed type of filepos to long
+
 2008-08-24  Markus Steinborn <msteinbo@uni-paderborn.de>
 
 	* src/info.c: Skip displaying info-popup until gv_infoSkipErrors
